# ChangeLog for dev-util/motor
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/motor/ChangeLog,v 1.12 2007/08/30 13:24:40 phreak Exp $

  30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing liquidx from metadata due to his retirement (see #171155 for
  reference).

  19 Sep 2006; Alastair Tse <liquidx@gentoo.org> -motor-3.3.0.ebuild,
  -motor-3.3.0-r1.ebuild, -motor-3.4.0.ebuild, motor-3.4.0-r1.ebuild:
  stable for x86

  22 Aug 2006; <wormo@gentoo.org> motor-3.4.0-r1.ebuild:
  stable on ppc (Bug #135020)

*motor-3.4.0-r1 (22 Aug 2006)
*motor-3.3.0-r1 (22 Aug 2006)

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org>
  +files/motor-3.2.2-security.patch, +files/motor-3.3.0-gcc34-2.patch,
  -motor-3.2.4.1.ebuild, motor-3.3.0.ebuild, +motor-3.3.0-r1.ebuild,
  +motor-3.4.0-r1.ebuild:
  added patch for security purposes to 3.3.0 and 3.4.0 (#135020)(#113683).
  updated the gcc34 patch for 3.3.0.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> motor-3.3.0.ebuild:
  Stable on ppc.

*motor-3.4.0 (20 Apr 2005)

  20 Apr 2005; Alastair Tse <liquidx@gentoo.org>
  +files/motor-3.3.0-gcc34.patch, motor-3.3.0.ebuild, +motor-3.4.0.ebuild:
  version bump

*motor-3.3.0 (24 Jul 2004)

  24 Jul 2004; Alastair Tse <liquidx@gentoo.org> +motor-3.3.0.ebuild:
  version bump. changing back to official release rather than debian releases

*motor-3.2.4.1 (28 Mar 2004)

  28 Mar 2004; <liquidx@gentoo.org> motor-3.2.4.1.ebuild:
  version bump to fix segv (#45616)

  22 Feb 2004; David Holm <dholm@gentoo.org> motor-3.2.4.ebuild:
  Added to ~ppc.

*motor-3.2.4 (10 Apr 2003)

  10 Apr 2003; Alastair Tse <liquidx@gentoo.org> motor-3.2.4.ebuild:
  new ebuild. submitted by Max Mylokostenko <max_m@ukrpost.net>.
