@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/motor/motor-3.4.0-r1.ebuild,v 1.3 2006/09/19 20:08:38 liquidx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/motor/motor-3.4.0-r1.ebuild,v 1.4 2007/11/13 21:57:08 wolf31o2 Exp $
 
 inherit eutils
 
@@ -30,7 +30,7 @@ src_compile() {
 src_install() {
 	einstall || die
 
-	dodoc AUTHORS COPYING README TODO FAQ ChangeLog
+	dodoc AUTHORS README TODO FAQ ChangeLog
 	docinto tutorial
 	dohtml -r tutorial/*
 }
