@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/motor
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/motor/ChangeLog,v 1.12 2007/08/30 13:24:40 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/motor/ChangeLog,v 1.13 2007/11/13 21:57:08 wolf31o2 Exp $
+
+  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> motor-3.4.0-r1.ebuild:
+  QA Cleanup: removed COPYING from dodoc to shut repoman up.
 
   30 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing liquidx from metadata due to his retirement (see #171155 for
